[gd_scene load_steps=5 format=3 uid="uid://bjbt5umbspxho"]

[ext_resource type="Script" path="res://PlayerPartyManager.gd" id="1_5t67x"]
[ext_resource type="Texture2D" uid="uid://chprwaf3to7mh" path="res://sprites/alienBeige_stand.png" id="1_8v7ni"]
[ext_resource type="Script" path="res://Player.gd" id="1_vkdvl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ywr4e"]
radius = 40.0

[node name="Main" type="Node2D"]

[node name="PlayerPartyManager" type="Node2D" parent="."]
script = ExtResource("1_5t67x")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player2" type="Node2D" parent="."]
position = Vector2(-56, -13)
script = ExtResource("1_vkdvl")

[node name="PlayerSprite" type="Sprite2D" parent="Player2"]
texture = ExtResource("1_8v7ni")

[node name="MousePickableArea" type="Area2D" parent="Player2"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2/MousePickableArea"]
shape = SubResource("CircleShape2D_ywr4e")

[node name="Player" type="Node2D" parent="."]
script = ExtResource("1_vkdvl")

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
texture = ExtResource("1_8v7ni")

[node name="MousePickableArea" type="Area2D" parent="Player"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/MousePickableArea"]
shape = SubResource("CircleShape2D_ywr4e")

[node name="GUICanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUICanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="GUICanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.0
offset_top = 24.0
offset_right = 126.0
offset_bottom = 76.0
grow_horizontal = 2
size_flags_vertical = 0
text = "Left click to select / deselect unit
Right click to move selected unit"
